.k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-service
spec:
  type: ClusterIP
  selector:
    app: sre-frontend
  ports:
    - port: 5000
      targetPort: 5000
