.k8s/metrics_blackhole_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-blackhole
spec:
  ports:
    - port: 80
