.k8s/postgres_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
  selector:
    app: sre-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-backend
  labels:
    app: sre-backend
spec:
  selector:
    matchLabels:
      app: sre-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sre-backend
    spec:
      containers:
      - image: postgres:16-alpine
        name: postgres-sre-backend
        ports:
        - containerPort: 5432
          name: sre-backend
        volumeMounts:
        - name: postgres-pv-claim
          mountPath: /var/lib/postgresql/data
        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-pv-claim
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      - name: postgres-init
        configMap:
          name: postgres-init
